# mobilenetv2-torch

./: README.md  export.py  pyproject.toml  train.py
